integrations/tree-sitter/grammar.js
/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: 'bit',

  extras: $ => [/[ \t\r\n]+/, $.comment],

  word: $ => $.identifier,

  externals: $ => [$._heredoc_label_eol, $._heredoc_end, $._heredoc_content],

  rules: {
    source_file: $ => repeat($._statement),

    // `# ` (or `#\t`) starts a comment. `#{...}` is string interpolation, so
    // `#` not followed by whitespace is reserved — never a comment.
    comment: $ => /#[ \t][^\n]*/,

    _statement: $ => choice(
      $.import_statement,
      $.let_statement,
      $.param_statement,
      $.target_statement,
      $.output_statement,
      $.block,
    ),

    // ── Statements ──

    // `import "<host/path>" [as <identifier>]`
    // URL is a bare git path (e.g. `github.com/foo/bar`) or a relative
    // local path (`./modules/foo`). Optional alias overrides the
    // auto-derived provider name.
    import_statement: $ => seq(
      'import',
      field('url', choice($.string, $.raw_string)),
      optional(seq('as', field('alias', $.identifier))),
    ),

    let_statement: $ => seq(
      'let',
      field('name', $.identifier),
      optional(seq(':', field('type', $.type))),
      '=',
      field('value', $._expression),
    ),

    param_statement: $ => seq(
      'param',
      field('name', $.identifier),
      optional(seq(':', field('type', $.type))),
      optional(seq('=', field('default', $._expression))),
    ),

    target_statement: $ => seq(
      'target',
      field('name', $.identifier),
      '=',
      '[',
      optional(seq(
        $.dotted_identifier,
        repeat(seq(',', $.dotted_identifier)),
      )),
      ']',
    ),

    output_statement: $ => seq(
      'output',
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    // `protected` and `explicit` are independent and may appear in either
    // order. `repeat(choice(...))` allows both orderings without baking the
    // ordering into the grammar; the real parser enforces uniqueness.
    block: $ => seq(
      optional(field('phase', $.phase_modifier)),
      repeat(choice(
        field('protected', $.protected_modifier),
        field('explicit', $.explicit_modifier),
      )),
      field('name', $.identifier),
      optional(field('matrix_keys', $.block_matrix_keys)),
      '=',
      field('provider', $.identifier),
      optional(seq('.', field('resource', $.identifier))),
      '{',
      repeat($.field_assignment),
      '}',
    ),

    phase_modifier: _ => choice('pre', 'post'),
    protected_modifier: _ => 'protected',
    explicit_modifier: _ => 'explicit',

    block_matrix_keys: $ => seq(
      '[',
      $.identifier,
      repeat(seq(',', $.identifier)),
      ']',
    ),

    field_assignment: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
      optional(','),
    ),

    dotted_identifier: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    ),

    // ── Types ──

    type: $ => prec.left(seq(
      $._type_atom,
      repeat(seq('|', $._type_atom)),
    )),

    _type_atom: $ => choice($.list_type, $.map_type, $.scalar_type),

    list_type: $ => seq('[', $.type, ']'),

    map_type: $ => seq('{', 'string', '=', $.type, '}'),

    scalar_type: _ => choice('string', 'number', 'bool', 'duration', 'path', 'secret'),

    // ── Expressions ──

    _expression: $ => choice(
      $.if_expression,
      $._add_expression,
    ),

    if_expression: $ => prec.right(seq(
      'if', field('condition', $._expression),
      'then', field('then', $._expression),
      'else', field('else', $._expression),
    )),

    _add_expression: $ => choice(
      $.add_expression,
      $._pipe_expression,
    ),

    add_expression: $ => prec.left(1, seq(
      field('left', $._add_expression),
      '+',
      field('right', $._pipe_expression),
    )),

    _pipe_expression: $ => choice(
      $.pipe_expression,
      $._cmp_expression,
    ),

    pipe_expression: $ => prec.left(2, seq(
      field('value', $._pipe_expression),
      '|',
      field('pipe', $.identifier),
      optional(seq(
        '(',
        optional(seq(
          $._expression,
          repeat(seq(',', $._expression)),
        )),
        ')',
      )),
    )),

    _cmp_expression: $ => choice(
      $.binary_expression,
      $._primary,
    ),

    binary_expression: $ => prec.left(3, seq(
      field('left', $._primary),
      field('op', choice('==', '!=')),
      field('right', $._primary),
    )),

    _primary: $ => choice(
      $.string,
      $.raw_string,
      $.heredoc,
      $.duration,
      $.number,
      $.boolean,
      $.null,
      $.list,
      $.map,
      $.call,
      $.reference,
    ),

    // ── Strings ──

    string: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $._bare_hash,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    _string_content: _ => token.immediate(prec(1, /[^"\\#]+/)),

    // A `#` that isn't followed by `{`. Tree-sitter's GLR lexer picks the
    // longest match, so `#{` is preferred over `#` when both apply.
    _bare_hash: _ => token.immediate('#'),

    escape_sequence: _ => token.immediate(/\\./),

    interpolation: $ => seq(
      token.immediate('#{'),
      $._expression,
      '}',
    ),

    raw_string: _ => seq("'", /[^']*/, "'"),

    // Body is wrapped in its own node so `(heredoc_body) @string`
    // can mark the whole interior as a string scope while leaving
    // the `<<`/label/terminator markers (siblings of heredoc_body
    // inside heredoc) un-styled. With heredoc_content as a bare
    // sibling of interpolation, Zed's stack-based highlighter
    // failed to apply @variable to identifiers inside the second
    // and later interpolations (the @string scope from the
    // preceding sibling heredoc_content effectively leaked across
    // the boundary in Zed, though tree-sitter-highlight handled it
    // correctly). Mirroring tree-sitter-ruby's heredoc_body shape
    // fixes it.
    heredoc: $ => seq(
      $._heredoc_start,
      $._heredoc_label_eol,
      optional($.heredoc_body),
      $._heredoc_end,
    ),

    heredoc_body: $ => repeat1(choice($._heredoc_content, $.interpolation)),

    _heredoc_start: _ => token(seq('<<', optional('-'))),

    // ── Scalars ──

    number: _ => /\d+(\.\d+)?/,

    // Duration literals: `5s`, `500ms`, `1.5h` — longer unit suffixes
    // must come first so `ms` isn't read as `m` + `s`. Takes precedence
    // over `number` via tree-sitter's longest-match rule.
    duration: _ => token(prec(1, /\d+(\.\d+)?(ns|us|ms|s|m|h|d)/)),

    boolean: _ => choice('true', 'false'),

    null: _ => 'null',

    // ── Collections ──

    list: $ => seq(
      '[',
      optional(seq(
        $._expression,
        repeat(seq(',', $._expression)),
      )),
      ']',
    ),

    map: $ => seq(
      '{',
      optional(seq(
        $.map_entry,
        repeat(seq(',', $.map_entry)),
      )),
      '}',
    ),

    map_entry: $ => seq(
      field('key', choice($.identifier, $.string, $.raw_string)),
      '=',
      field('value', $._expression),
    ),

    // ── Calls & References ──

    call: $ => seq(
      field('name', choice($.identifier, $.provider_function)),
      '(',
      optional(seq(
        $._expression,
        repeat(seq(',', $._expression)),
      )),
      ')',
    ),

    provider_function: $ => seq(
      $.identifier,
      '.',
      $.identifier,
    ),

    reference: $ => seq(
      choice($.matrix_slice_ref, $.identifier),
      repeat(seq('.', $.identifier)),
    ),

    matrix_slice_ref: $ => seq(
      field('name', $.identifier),
      '[',
      $._matrix_key,
      repeat(seq(',', $._matrix_key)),
      ']',
    ),

    _matrix_key: $ => $._expression,

    // ── Identifier ──

    identifier: _ => /[A-Za-z_][A-Za-z0-9_-]*/,
  },
});
