integrations/tree-sitter/test/corpus/blocks.txt
================================================================================
simple block
================================================================================
server = go.binary {
  main = "./cmd/server"
}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    provider: (identifier)
    resource: (identifier)
    (field_assignment
      name: (identifier)
      value: (string))))

================================================================================
parameterized block
================================================================================
image(tag : string, push = false) = docker.image {
  tag = tag
}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (scalar_type)))
      (parameter
        name: (identifier)
        default: (boolean)))
    provider: (identifier)
    resource: (identifier)
    (field_assignment
      name: (identifier)
      value: (reference
        (identifier)))))

================================================================================
parameterized matrix block
================================================================================
build[arch](tag : string) = exec {
  command = "build #{arch} #{tag}"
}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    matrix_keys: (block_matrix_keys
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (scalar_type))))
    provider: (identifier)
    (field_assignment
      name: (identifier)
      value: (string
        (interpolation
          (reference
            (identifier)))
        (interpolation
          (reference
            (identifier)))))))

================================================================================
empty block
================================================================================
fmt = rust.fmt {}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    provider: (identifier)
    resource: (identifier)))

================================================================================
bare provider block (no resource)
================================================================================
docs = exec {
  command = "make"
}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    provider: (identifier)
    (field_assignment
      name: (identifier)
      value: (string))))

================================================================================
pre phase modifier
================================================================================
pre fmt = rust.fmt {}
--------------------------------------------------------------------------------
(source_file
  (block
    phase: (phase_modifier)
    name: (identifier)
    provider: (identifier)
    resource: (identifier)))

================================================================================
post phase modifier
================================================================================
post report = exec {}
--------------------------------------------------------------------------------
(source_file
  (block
    phase: (phase_modifier)
    name: (identifier)
    provider: (identifier)))

================================================================================
protected modifier
================================================================================
protected db = aws.aurora {
  cluster = "prod"
}
--------------------------------------------------------------------------------
(source_file
  (block
    protected: (protected_modifier)
    name: (identifier)
    provider: (identifier)
    resource: (identifier)
    (field_assignment
      name: (identifier)
      value: (string))))

================================================================================
pre and protected modifiers
================================================================================
pre protected db = aws.aurora {}
--------------------------------------------------------------------------------
(source_file
  (block
    phase: (phase_modifier)
    protected: (protected_modifier)
    name: (identifier)
    provider: (identifier)
    resource: (identifier)))

================================================================================
explicit modifier
================================================================================
explicit migrate = exec {
  command = "./migrate"
}
--------------------------------------------------------------------------------
(source_file
  (block
    explicit: (explicit_modifier)
    name: (identifier)
    provider: (identifier)
    (field_assignment
      name: (identifier)
      value: (string))))

================================================================================
protected and explicit modifiers (either order)
================================================================================
protected explicit db = aws.aurora {}
explicit protected db2 = aws.aurora {}
--------------------------------------------------------------------------------
(source_file
  (block
    protected: (protected_modifier)
    explicit: (explicit_modifier)
    name: (identifier)
    provider: (identifier)
    resource: (identifier))
  (block
    explicit: (explicit_modifier)
    protected: (protected_modifier)
    name: (identifier)
    provider: (identifier)
    resource: (identifier)))

================================================================================
matrix expansion keys
================================================================================
binary[arch] = go.binary {
  goarch = arch
}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    matrix_keys: (block_matrix_keys
      (identifier))
    provider: (identifier)
    resource: (identifier)
    (field_assignment
      name: (identifier)
      value: (reference
        (identifier)))))

================================================================================
matrix expansion multiple keys
================================================================================
deploy[arch, region] = kubernetes.deployment {}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    matrix_keys: (block_matrix_keys
      (identifier)
      (identifier))
    provider: (identifier)
    resource: (identifier)))

================================================================================
matrix concurrency limit
================================================================================
crate[package] = rust.build {
  concurrency = 1
  package = package
}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    matrix_keys: (block_matrix_keys
      (identifier))
    provider: (identifier)
    resource: (identifier)
    (field_assignment
      name: (identifier)
      value: (number))
    (field_assignment
      name: (identifier)
      value: (reference
        (identifier)))))

================================================================================
fields with commas
================================================================================
image = docker.image {
  tag = "myapp:latest",
  dockerfile = "Dockerfile",
}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    provider: (identifier)
    resource: (identifier)
    (field_assignment
      name: (identifier)
      value: (string))
    (field_assignment
      name: (identifier)
      value: (string))))

================================================================================
kebab-case identifiers
================================================================================
integration-test = exec.test {
  depends_on = [backend-linux]
}
--------------------------------------------------------------------------------
(source_file
  (block
    name: (identifier)
    provider: (identifier)
    resource: (identifier)
    (field_assignment
      name: (identifier)
      value: (list
        (reference
          (identifier))))))
