integrations/tree-sitter/test/corpus/expressions.txt
================================================================================
string interpolation
================================================================================
let x = "hello #{name}"
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (string
      (interpolation
        (reference
          (identifier))))))

================================================================================
escape sequences
================================================================================
let x = "line1\nline2\t\""
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
raw string
================================================================================
let x = 'no $escapes \here'
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (raw_string)))

================================================================================
boolean true
================================================================================
let x = true
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (boolean)))

================================================================================
boolean false
================================================================================
let x = false
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (boolean)))

================================================================================
null
================================================================================
let x = null
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (null)))

================================================================================
list
================================================================================
let x = [1, 2, 3]
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (list
      (number)
      (number)
      (number))))

================================================================================
list with trailing comma
================================================================================
let x = [
  "a",
  "b",
]
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (list
      (string)
      (string))))

================================================================================
nested list
================================================================================
let x = [["a", "b"], ["c"]]
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (list
      (list
        (string)
        (string))
      (list
        (string)))))

================================================================================
map with identifier keys
================================================================================
let x = { a = 1, b = 2 }
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (map
      (map_entry
        key: (identifier)
        value: (number))
      (map_entry
        key: (identifier)
        value: (number)))))

================================================================================
map with trailing comma
================================================================================
let x = {
  a = 1,
  b = 2,
}
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (map
      (map_entry
        key: (identifier)
        value: (number))
      (map_entry
        key: (identifier)
        value: (number)))))

================================================================================
map with string keys
================================================================================
let x = { "host.docker.internal" = "10.0.0.1" }
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (map
      (map_entry
        key: (string)
        value: (string)))))

================================================================================
function call
================================================================================
let x = env("HOME")
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (call
      name: (identifier)
      (string))))

================================================================================
function call with multiple args
================================================================================
let x = env("VAR", "default")
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (call
      name: (identifier)
      (string)
      (string))))

================================================================================
function call no args
================================================================================
let x = pwd()
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (call
      name: (identifier))))

================================================================================
provider function call
================================================================================
let packages = go.packages("./...")
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (call
      name: (provider_function
        (identifier)
        (identifier))
      (string))))

================================================================================
pipe
================================================================================
let x = exec("cmd") | trim
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (pipe_expression
      value: (call
        name: (identifier)
        (string))
      pipe: (identifier))))

================================================================================
pipe chain
================================================================================
let x = exec("cmd") | trim | lines | uniq
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (pipe_expression
      value: (pipe_expression
        value: (pipe_expression
          value: (call
            name: (identifier)
            (string))
          pipe: (identifier))
        pipe: (identifier))
      pipe: (identifier))))

================================================================================
pipe with args
================================================================================
let x = s | split(",")
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (pipe_expression
      value: (reference
        (identifier))
      pipe: (identifier)
      (string))))

================================================================================
if expression
================================================================================
let x = if env == "prod" then 3 else 1
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (if_expression
      condition: (binary_expression
        left: (reference
          (identifier))
        right: (string))
      then: (number)
      else: (number))))

================================================================================
list concatenation
================================================================================
let x = [1, 2] + [3, 4]
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (add_expression
      left: (list
        (number)
        (number))
      right: (list
        (number)
        (number)))))

================================================================================
dotted reference
================================================================================
let x = image.ref
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (reference
      (identifier)
      (identifier))))

================================================================================
matrix slice reference
================================================================================
let x = image[arch]
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (reference
      (matrix_slice_ref
        name: (identifier)
        (reference
          (identifier))))))

================================================================================
matrix slice reference with string key
================================================================================
let x = image["amd64"].ref
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (reference
      (matrix_slice_ref
        name: (identifier)
        (string))
      (identifier))))

================================================================================
matrix slice reference with typed keys
================================================================================
let x = image["1", 1, true, 5s].ref
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (reference
      (matrix_slice_ref
        name: (identifier)
        (string)
        (number)
        (boolean)
        (duration))
      (identifier))))

================================================================================
matrix slice reference with reference key
================================================================================
let x = image[crate["core"]].ref
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (reference
      (matrix_slice_ref
        name: (identifier)
        (reference
          (matrix_slice_ref
            name: (identifier)
            (string))))
      (identifier))))

================================================================================
inequality
================================================================================
let x = a != b
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (binary_expression
      left: (reference
        (identifier))
      right: (reference
        (identifier)))))

================================================================================
duration literal seconds
================================================================================
let t = 5s
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (duration)))

================================================================================
duration literal milliseconds
================================================================================
let t = 500ms
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (duration)))

================================================================================
duration literal fractional hours
================================================================================
let t = 1.5h
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (duration)))

================================================================================
duration type annotation
================================================================================
param timeout : duration = 30s
--------------------------------------------------------------------------------
(source_file
  (param_statement
    name: (identifier)
    type: (type
      (scalar_type))
    default: (duration)))

================================================================================
parameterized block reference
================================================================================
let x = compile(package = package).path
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (block_call
      name: (identifier)
      arguments: (block_argument_list
        (named_argument
          name: (identifier)
          value: (reference
            (identifier))))
      field: (identifier))))

================================================================================
parameterized block dependency
================================================================================
let x = [prepare(env = "prod")]
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (list
      (block_call
        name: (identifier)
        arguments: (block_argument_list
          (named_argument
            name: (identifier)
            value: (string)))))))
