integrations/tree-sitter/test/corpus/statements.txt
================================================================================
let with simple value
================================================================================
let x = 42
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    value: (number)))

================================================================================
let with type annotation
================================================================================
let port : number = 8080
--------------------------------------------------------------------------------
(source_file
  (let_statement
    name: (identifier)
    type: (type
      (scalar_type))
    value: (number)))

================================================================================
param with type
================================================================================
param environment : string
--------------------------------------------------------------------------------
(source_file
  (param_statement
    name: (identifier)
    type: (type
      (scalar_type))))

================================================================================
param with type and default
================================================================================
param replicas : number = 1
--------------------------------------------------------------------------------
(source_file
  (param_statement
    name: (identifier)
    type: (type
      (scalar_type))
    default: (number)))

================================================================================
param with list type
================================================================================
param paths : [string]
--------------------------------------------------------------------------------
(source_file
  (param_statement
    name: (identifier)
    type: (type
      (list_type
        (type
          (scalar_type))))))

================================================================================
param with union type
================================================================================
param value : string | number
--------------------------------------------------------------------------------
(source_file
  (param_statement
    name: (identifier)
    type: (type
      (scalar_type)
      (scalar_type))))

================================================================================
param with map type
================================================================================
param env : {string = string}
--------------------------------------------------------------------------------
(source_file
  (param_statement
    name: (identifier)
    type: (type
      (map_type
        (type
          (scalar_type))))))

================================================================================
target
================================================================================
target build = [server, image]
--------------------------------------------------------------------------------
(source_file
  (target_statement
    name: (identifier)
    (target_call
      name: (dotted_identifier
        (identifier)))
    (target_call
      name: (dotted_identifier
        (identifier)))))

================================================================================
target with dotted refs
================================================================================
target deploy = [app.deploy, lib.api]
--------------------------------------------------------------------------------
(source_file
  (target_statement
    name: (identifier)
    (target_call
      name: (dotted_identifier
        (identifier)
        (identifier)))
    (target_call
      name: (dotted_identifier
        (identifier)
        (identifier)))))

================================================================================
target selects parameterized matrix slice
================================================================================
target release = [build["arm64"](tag = "1.2.3")]
--------------------------------------------------------------------------------
(source_file
  (target_statement
    name: (identifier)
    (target_call
      name: (dotted_identifier
        (identifier))
      (string)
      arguments: (argument_list
        (named_argument
          name: (identifier)
          value: (string))))))

================================================================================
parameterized target with block arguments
================================================================================
target publish(tag : string, push = false) = [image(tag = tag, push = push)]
--------------------------------------------------------------------------------
(source_file
  (target_statement
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (scalar_type)))
      (parameter
        name: (identifier)
        default: (boolean)))
    (target_call
      name: (dotted_identifier
        (identifier))
      arguments: (argument_list
        (named_argument
          name: (identifier)
          value: (reference
            (identifier)))
        (named_argument
          name: (identifier)
          value: (reference
            (identifier)))))))

================================================================================
output
================================================================================
output endpoint = app.endpoint
--------------------------------------------------------------------------------
(source_file
  (output_statement
    name: (identifier)
    value: (reference
      (identifier)
      (identifier))))

================================================================================
import bare git url
================================================================================
import "github.com/alecthomas/bit-modules"
--------------------------------------------------------------------------------
(source_file
  (import_statement
    url: (string)))

================================================================================
import local path with raw string
================================================================================
import './.bit/modules/docker'
--------------------------------------------------------------------------------
(source_file
  (import_statement
    url: (raw_string)))

================================================================================
import with alias
================================================================================
import "github.com/alecthomas/bit-modules" as bm
--------------------------------------------------------------------------------
(source_file
  (import_statement
    url: (string)
    alias: (identifier)))

================================================================================
import subpath with alias
================================================================================
import "github.com/foo/bar/waz" as wx
--------------------------------------------------------------------------------
(source_file
  (import_statement
    url: (string)
    alias: (identifier)))

================================================================================
comment with space
================================================================================
# this is a comment
let x = 42
--------------------------------------------------------------------------------
(source_file
  (comment)
  (let_statement
    name: (identifier)
    value: (number)))
